--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ body::before {
 
 .report-issue-button {
   position: fixed;
-  top: 100px;
+  bottom: 120px;
   right: 32px;
   background: #000000;
   color: #ffffff;
@@ -156,7 +156,7 @@ body::before {
 
 .my-location-button {
   position: fixed;
-  top: 100px;
+  bottom: 120px;
   right: 200px;
   background: #000000;
   color: #ffffff;
@@ -194,14 +194,14 @@ body::before {
 
 @media (max-width: 768px) {
   .report-issue-button {
-    top: 80px;
+    bottom: 100px;
     right: 16px;
     padding: 14px 24px;
     font-size: 13px;
   }
   
   .my-location-button {
-    top: 80px;
+    bottom: 100px;
     right: 180px;
     width: 48px;
     height: 48px;
