--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ body::before {
   display: flex;
   flex-direction: column;
   z-index: 1;
+  padding-top: 88px;
 }
 
 /* App Header */
@@ -57,8 +58,11 @@ body::before {
   align-items: center;
   justify-content: flex-start;
   flex-shrink: 0;
-  z-index: 100;
-  position: relative;
+  z-index: 2000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .header-content {
@@ -123,7 +127,7 @@ body::before {
 
 .map-controls {
   position: absolute;
-  bottom: 40px;
+  bottom: 20%;
   right: 32px;
   display: flex;
   align-items: center;
@@ -205,7 +209,7 @@ body::before {
 
 @media (max-width: 768px) {
   .map-controls {
-    bottom: 24px;
+    bottom: 20%;
     right: 16px;
   }
 
